[package]
name = "eip5139"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.140", features = [ "derive" ] }
serde_json = "1.0.81"
json-patch = { version = "0.2.6", default-features = false }
jsonschema = { version = "0.16.0", default-features = false, features = [ "draft202012" ] }
lazy_static = "1.4.0"
semver = "1.0.12"

[dev-dependencies]
futures-executor = "0.3.21"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.81", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4.31"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.58"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.13"
